<resources>
    <string name="app_name">UAS_2011501059_Efrido Ridman_Lokasi Pelayanan Konseling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sejarah1">Bimbingan dan konseling ini lahir pada tahun 1908 di Amerika dengan berdirinya vocational bureau pada tahun 1908 oleh Frank Parsons. Frank Parson dikenal juga sebagai Father of The Guedance Movement in America Education. Frank menekankan bahwa penting bagi setiap individu untuk diberikan pertolongan dari orang lain untuk lebih memahami kekurangan dan kelemahan diri sehingga dapat digunakan untuk proses pengembangan diri lebih baik dan menentukan pekerjaan yang cocok bagi dirinya.</string>
    <string name="sejarah2">Pertama kali istilah bimbingan dikenal pada abad ke- 19 hingga awal abad ke 20 di Boston. Pada awalnya istilah ini dikenal dengan berdirinya biro di bidang profesi dan ketenagakerjaan. Tujuannya yaitu untuk membantu pemuda dalam memilih karir atau pekerjaan sesuai dengan keahlian mereka dan juga melatih para guru untuk memberikan layanan bimbingan di sekolah.</string>
    <string name="sejarah3">Pada masa yang hampir sama, Jasse B Davis juga memulai memberikan layanan konseling di SMA pada tahun 1898. Pada tahun 1907 dia mencoba memasukkan program bimbingan ke dalam pensisikan siswa SMA di Detroit. Eli Weaver pada tahun 1905 mendirikan Students Aid Committee of High School di Newyork dan dalam mengembangkan komitenya, dia berada pada suatu kesimpulan. Kesimpulan yang dikemukakannya yaitu bahwa siswa membutuhkan saran dan konsultasi sebelum mereka masuk ke dunia kerja.</string>
    <string name="sejarah4">Pada tahun 1920 para konselor sekolah di Boston dan New York diharapkan mampu membantu siswa dalam memilihkan pekerjaan yang tepat sesuai dengan keahlian masing- masing individunya. Selama itu pula, pada tahun 1920 an sertifikasi untuk konselor sekolah mulai diterapkan.</string>
    <string name="sejarah5">Pada perkembangannya, mula mula bimbingan konseling dikenal sebagai bimbingan untuk pekerjaan atau karir, namun pada perkembangan lebih lanjut merambah pada bidang pendidikan atau Education Guidance yang dirintid Jasse B. Davis. Dimana bimbingan ini dikenal dengan adanya bimbingan dalam segi kepribadian atau Personal Guidance. Bimbingan konseling juga berkembang di bidang- bidang yang lain seperti pengertian, dan praktek bimbingan konseling terhadap ilmu sosial, budaya, kewarganegaraan, keagamaan, dan lain sebagainya.</string>
</resources>