<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:background="@drawable/logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16sdp"
                    android:gravity="center"
                    android:text="Sejarah Konseling"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/sejarah1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/sejarah2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/sejarah3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/sejarah4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/sejarah5"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</FrameLayout>